# fs2json

./: .gitignore  LICENSE  pyproject.toml  setup.cfg  setup.py
src/fs2json/: cli.py
