[metadata]
name = fs2json
version = 0.1.0
author = Andrew Serra
author_email = andy@serra.us
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/AndrewSerra/fs2json

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fs2json = fs2json.cli:main
